<resources>
    <string name="app_name" translatable="false">SoundAware</string>
    <string name="sound_label" translatable="false">SOUND</string>
    <string name="aware_label" translatable="false">AWARE</string>
    <string name="ultima_alerta_label" translatable="false">Última alerta</string>
    <string name="historial_label" translatable="false">Historial</string>
    <string name="alert_image_description_label">Alert icon</string>
    <string name="alert_date_label">23 de abril de 2025, 12:44pm</string>
    <string name="alert_description_label">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="alert_level">Prioridad: </string>
    <string name="alert_level_value">ALTA</string>
    <string name="alert_description">Descripción: </string>
    <string name="alert_description_value">Alarma general activada</string>
    <string name="alert_type">Clasificación: </string>
    <string name="alert_type_value">Alarm</string>
</resources>