<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="9dp"
    app:cardElevation="4dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="35dp"
        android:paddingBottom="35dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:gravity="center_vertical"
        android:background="#FFFFFF">

        <ImageView
            android:id="@+id/card_icon"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/alert_image_description_label"
            tools:srcCompat="@drawable/history_icon" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingTop="2dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/alert_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/alert_date_label"
                android:textColor="#181A89"
                android:layout_marginBottom="3dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="3dp">

                <TextView
                    android:id="@+id/alert_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_type"
                    android:textColor="#537FE7"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/alert_type_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_type_value"
                    android:textColor="#010101"
                    android:textSize="14sp"
                    android:layout_marginLeft="12dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="3dp">

                <TextView
                    android:id="@+id/alert_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_level"
                    android:textColor="#537FE7"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/alert_level_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_level_value"
                    android:textColor="#010101"
                    android:textSize="14sp"
                    android:layout_marginLeft="12dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/alert_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alert_description"
                android:textColor="#537FE7"
                android:textSize="14sp"
                android:layout_marginBottom="1dp"/>

            <TextView
                android:id="@+id/alert_description_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alert_description_value"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginTop="1dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>